--- a/exercitii css/subscription.html
+++ b/exercitii css/subscription.html
@@ -71,6 +71,7 @@
         .btn:hover {
             background-image: linear-gradient(#2990d4, #01385e, #2990d4);
             color: antiquewhite;
+            border: 3px solid blue;
 
         }
        
