--- a/exercitii css/cinema-advanced.html
+++ b/exercitii css/cinema-advanced.html
@@ -15,6 +15,9 @@
             text-align: center;
             margin: 30px;
         }
+        span:hover {
+            background-color: #222;
+        }
         .cinema .vip span {
             background-image:url(https://www.iconarchive.com/download/i52652/archigraphs/modern-chairs/Magenta-Seat.72.png);
             width: 72px;
