--- a/exercitii css/preloader-sqrt.html
+++ b/exercitii css/preloader-sqrt.html
@@ -12,6 +12,8 @@
             height: 200px;
             background: green;
             margin: 100px;
+            transform: rotate(45deg);
+            
         }
         .preloader .square1 {
             width: 10px;
